# cpp-days

practice_01/: CMakeLists.txt  main.cpp
practice_02/: CMakeLists.txt  main.cpp
practice_03/: CMakeLists.txt  DynArray.cpp  DynArray.hpp  MyStack.cpp  MyStack.hpp  main.cpp
practice_04/: main.cpp
practice_04/raw_pointers/: DynArray.cpp  DynArray.hpp  Vec3D.cpp  Vec3D.hpp
practice_04/smart_pointers/: CMakeLists.txt  DynArray.cpp  DynArray.hpp
practice_05/: Mat2D.cpp  Mat2D.hpp  SLAE.cpp  SLAE.hpp  VecND.cpp  VecND.hpp  main.cpp
practice_05/raw_pointers/: CMakeLists.txt  Mat2D.cpp  SLAE.hpp  VecND.cpp
practice_05/smart_pointers/: Mat2D.cpp  Mat2D.hpp  SLAE.cpp  SLAE.hpp  VecND.cpp  VecND.hpp  main.cpp
practice_06/: CMakeLists.txt  main.cpp
practice_06/include/: DynArray.hpp  Mat2D.hpp  Queue.hpp  SLAE.hpp  VecND.hpp
practice_06/src/: DynArray.cpp  Mat2D.cpp  Queue.cpp  SLAE.cpp  VecND.cpp
practice_07/: CMakeLists.txt  main.cpp
practice_08/: main.cpp
practice_08/include/: MyLinkedList.hpp
practice_08/raw_pointers/: CMakeLists.txt  main.cpp
practice_08/raw_pointers/include/: MyLinkedList.hpp  VectorTask.hpp
practice_08/raw_pointers/src/: MyLinkedList.cpp
practice_08/src/: MyLinkedList.cpp  VectorTask.cpp
practice_09/: CMakeLists.txt  main.cpp
practice_09/include/: Distributions.hpp  MyLinkedList.hpp  MyLinkedListTest.hpp  VectorTest.hpp
practice_09/src/: Distributions.cpp  MyLinkedList.cpp  MyLinkedListTest.cpp  VectorTest.cpp
practice_10/task_01/: CMakeLists.txt  main.cpp
practice_10/task_02/: main.cpp
practice_10/task_04/: main.cpp
practice_12/: main.cpp
practice_14/: README.txt
practice_15/: main.cpp
practice_15/smart_pointers/: CMakeLists.txt  main.cpp
practice_15/smart_pointers/include/: Circle.hpp  Rectangle.hpp  Shape.hpp  Triangle.hpp
practice_15/smart_pointers/src/: Circle.cpp  Rectangle.cpp  Shape.cpp  Triangle.cpp
practice_17-18/: README.md
practice_19/: CMakeLists.txt  main.cpp
practice_20/: README.md
practice_21-exam/: CMakeLists.txt  main.cpp  merge_output.hpp
(+44 files in other folders)
